Crop difficulty labels that wrap if too long (fixes #58)

--- a/rando/static/css/style.less
+++ b/rando/static/css/style.less
@@ -542,6 +542,8 @@ ul.social-buttons li {
 .slider-value {
   float:left; font-size: 7pt;
   text-align: center;
+  max-height: 20px;
+  overflow: hidden;
 
   &.first {
    text-align: left;
